Fixed TS errors

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
+    "ts:check": "tsc",
     "themegen": "npx tsx utils/theme/themegen/themegen.ts"
   },
   "dependencies": {
