--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~54.0.31",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.13",
+    "expo-crypto": "~15.0.8",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
@@ -41,6 +42,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.67.0",
     "react-native": "0.81.5",
+    "react-native-emoji-popup": "^0.3.3",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
@@ -50,6 +52,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "rn-emoji-keyboard": "^1.7.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
