--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "flashcard-expo",
+    "name": "Simple Flashcards",
     "slug": "flashcards",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -20,7 +20,8 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.alxz.flashcardexpo"
+      "package": "com.alxz.flashcardexpo",
+      "softwareKeyboardLayoutMode": "resize"
     },
     "web": {
       "output": "static",
@@ -34,9 +35,10 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#25786E",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#25786E",
+            "image": "./assets/images/splash-icon-dark.png"
           }
         }
       ]
